# qpeek

./: CLAUDE.md  README.md  SPEC.md  pyproject.toml
qpeek/: __init__.py  __main__.py  cli.py  html_gen.py  markdown.py  server.py
tests/: test_cli.py  test_markdown.py  test_server.py
