[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "qpeek"
version = "0.1.0"
description = "Transient web server for quick file viewing from a headless Linux box"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
qpeek = "qpeek.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
